Update to latest Commons DBCP 1.4.x
Fixes:
- DBCP-348: BasicDataSourceFactory uses wrong attribute name
            https://bz.apache.org/bugzilla/show_bug.cgi?id=58338
- DBCP-346: Exposed pool LIFO property as config option for DBCP
- DBCP-343: Modified execute methods of Statement objects to ensure that
            whenever a statement is used, the lastUsed property of its
            parent connection is updated.
- DBCP-330: Changed DelegatingDatabaseMetaData to no longer add itself
     &      to the AbandonedTrace of its parent connection. This was
  DBCP-352: causing excessive memory consumption and was not necessary,
            as resultsets created by DelegatingDatabaseMetaData
            instances are attached to the parent connection's trace on
            creation.
- DBCP-333: Correctly implemented the option to configure the class
            loader used to load the JDBC driver.
- DBCP-342: Modified createDataSource method in BasicDataSource to
     &      ensure that GenericObjectPool Evictor tasks are not started
  DBCP-339  and orphaned when BasicDataSource encounters errors on
     &      initialization.  Prior to this fix, when minIdle and
  DBCP-93   timeBetweenEvictionRunsMillis are both positive, Evictors
            orphaned by failed initialization can continue to generate
            database connection requests.
- DBCP-337: Made equals reflexive in DelegatingStatement (and
            subclasses), DelegatingMetaData, DelegatingResultSet and
            PoolingDriver#PoolGuardConnectionWrapper.
- DBCP-334: Exposed GenericObjectPool's softMinEvictableIdleTimeMillis
            property for configuration and use by BasicDataSource.